[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wagtail-dripdrop"
version = "0.1.0"
description = "Connect Wagtail form pages to DripDrop flows."
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "wagtail>=5.0",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-django",
]

[tool.ruff]
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["."]
DJANGO_SETTINGS_MODULE = "tests.settings"
